# instant-smtp

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
examples/: parse_command.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: command.rs
src/: lib.rs  types.rs
src/parse/: address.rs  command.rs  imf.rs  mod.rs  response.rs  trace.rs
tests/: trace.rs
