[package]
name = "instant-smtp"
description = "Low-level sans-I/O SMTP protocol implementation"
keywords = ["email", "smtp", "parser", "codec"]
version = "0.1.0"
repository = "https://github.com/InstantDomain/instant-smtp"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = []
serdex  = ["serde"]

[dependencies]
nom = "7"
abnf-core = "0.5"

# Optional
serde = { version = "1.0", features = ["derive"], optional = true }
